Update background color

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     body {
         position: relative;
         height: 100vh;
-        background: linear-gradient(to right, #ff9a9e, #fad0c4);
+        background: #292929;
     }
 
     .p {
