--- a/timeless.html
+++ b/timeless.html
@@ -1,12 +1,63 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-  <body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Click Me!</title>
+    <link rel="icon" href="icon.jpeg" type="image/icon type">
+    <script>
+    
+        var points = 0;
+        document.addEventListener('DOMContentLoaded', () => {
+
+            document.querySelector(".pulsating-circle").onclick = () => {
+                event.stopPropagation();
+                points += 1;
+
+
+
+                function randno(min, max) {
+                    let diff = max - min;
+                    let rand = Math.floor(Math.random() * diff);
+                    rand = rand + min;
+                    return rand;
+                }
+                let randh = randno(0, (window.screen.height - 150));
+                let randw = randno(0, (window.screen.width - 150));
+                let elem = document.querySelector('.pulsating-circle').style;
+                elem.top = `${randh}px`;
+                elem.left = `${randw}px`;
+                document.querySelector('#points').innerHTML = points
+
+
+            }
+            document.querySelector(".p").onclick = () => {
+
+
+                testJS();
+
+            }
+
+        })
+        function testJS() {
+            var b = document.getElementById('points').innerHTML,
+                url = 'cong.html?points=' + encodeURIComponent(b);
+            console.log(b)
+            document.location.href = url;
+        }
+
+    </script>
+</head>
+
+
+<body>
 
     <div class="p">
-        <div>
-          <h1 style="font-size: 10rem; margin-top: 30vh;">Your Score: <span id="title">0</span></h1>
-          <a href="index.html" style="color: rgb(60, 60, 60); text-decoration: none;"><h1>Play Again</h1></a>
-          <link rel="icon" href="icon.jpeg" type="image/icon type">
+        <div class="countdown">
+            <h1 id="points">0</h1>
+        </div>
+        <div class="pulsating-circle">
         </div>
 
     </div>
@@ -71,7 +122,7 @@
 
     /* Main styles */
     body {
-      overflow: hidden;
+        overflow: hidden;
         margin-top: 13.5rem;
         color: #999;
         font: 400 16px/1.5 exo, ubuntu, "segoe ui", helvetica, arial, sans-serif;
@@ -171,6 +222,7 @@
             transform: scale(.8);
         }
     }
+
     @media (max-width: 728px) {
         .pulsating-circle {
             width: 6rem;
@@ -186,12 +238,5 @@
         }
     }
 </style>
-<script>
-  window.onload = function () {
-      var url = document.location.href;
-      var parts = url.split("=");
-      var last_part = parts[parts.length-1];
-      document.getElementById('title').innerHTML = last_part;
-  }
-  </script> 
+
 </html>
